# sibyls

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  check.sh
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
config/: asset_pair.json  asset_pairs.json  oracle.json
sibyls/: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  diesel.toml
sibyls-keygen/: Cargo.toml  README.md
sibyls-keygen/src/: main.rs
sibyls/migrations/2024-07-01-232220_create_events/: down.sql  up.sql
sibyls/src/: common.rs  db.rs  error.rs  lib.rs  main.rs  schema.rs
sibyls/src/db/: dual.rs  mod.rs  postgres.rs  sled.rs
sibyls/src/oracle/: error.rs  mod.rs
sibyls/src/oracle/oracle_scheduler/: error.rs  mod.rs
sibyls/src/oracle/pricefeeds/: deribit.rs  error.rs  gateio.rs  kraken.rs  mod.rs  test_feed.rs
src/: common.rs  error.rs  lib.rs  main.rs
src/oracle/: error.rs  mod.rs  oracle_scheduler.rs
src/oracle/oracle_scheduler/: error.rs  messaging.rs  mod.rs
src/oracle/pricefeeds/: bitfinex.rs  bitstamp.rs  deribit.rs  gateio.rs  kraken.rs  mod.rs  test_feed.rs
