[package]
name = "sybils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.57"
async-trait = "0.1.53"
chrono = "0.4"
clap = { version = "3.1.18", features = ["derive"] }
clokwerk = "0.4.0-rc1"
displaydoc = "0.2"
dlc-messages = "0.2.0"
env_logger = "0.9.0"
futures = "0.3.21"
hex = "0.4"
lightning = "0.0.106"
log = "0.4.17"
parking_lot = "0.12.0"
queues = "1.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
secp256k1-sys = "0.5.2"
secp256k1-zkp = { version = "0.6.0", features = ["bitcoin_hashes", "rand-std"] }
secp256k1-zkp-5 = { package = "secp256k1-zkp", version = "0.5" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sled = "0.34"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["formatting"] }
tokio = { version = "1.18.2", features = ["full"] }

[dev-dependencies]
dlc = "0.2.0"
