[package]
name = "sibyls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-feed = []

[dependencies]
actix-web = "4.5.1"     # had to upgrade b/c they removed stdsimd feature (ahash dependency)
anyhow = "1.0.57"
async-trait = "0.1.53"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
clokwerk = "0.4.0-rc1"
displaydoc = "0.2"
dlc-messages = "~0.4.0"
lightning = "0.0.113" # used by dlc-messages
env_logger = "0.9.0"
futures = "0.3.21"
hex = "0.4"
humantime = "2.1.0"
log = "0.4.17"
parking_lot = "0.12.0"
queues = "1.1.0"
rand = "0.8.0"
reqwest = { version = "0.11.10", features = ["json"] }
secp256k1-zkp = { version = "0.7.0", features = ["bitcoin_hashes", "rand-std"] }
secp256k1 = "0.24.3" # used by secp256k1-zkp
secp256k1-sys = "0.6.0"# used by secp256k1
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sled = "0.34"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["formatting", "serde-human-readable"] }
tokio = { version = "1.18.2", features = ["full"] }

[dev-dependencies]
dlc = "~0.4.0"
tokio-test = "0.4.2"
